Rendering artefacts on codepen demo (https://codepen.io/noahblon/pen/DpNRyR?editors=1100 )
Categories
(Core :: Layout, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox-esr115 | --- | verified |
| firefox114 | --- | unaffected |
| firefox115 | --- | verified |
| firefox116 | --- | verified |
People
(Reporter: mayankleoboy1, Assigned: dshin)
References
(Regression, )
Details
(Keywords: regression)
Attachments
(2 files)
|
41.43 KB,
text/plain
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-release+
|
Details | Review |
Go to https://codepen.io/noahblon/pen/DpNRyR?editors=1100
Click inside the CSS code-pane
Let the demo run for 15-20 seconds
AR: the demo starts to flash pretty soon. After 5-10 seconds, triangular/rectangular black patches will appear
Regression:
Bug 1831148: Increase clamping range for TransformGfxRectToAncestor. r=emilio
| Reporter | ||
Comment 1•2 years ago
|
||
Comment 2•2 years ago
|
||
Set release status flags based on info from the regressing bug 1831148
:dshin, since you are the author of the regressor, bug 1831148, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
| Assignee | ||
Updated•2 years ago
|
Comment 3•2 years ago
|
||
:dshin has there been any progress on this?
Could this be triaged for Priority/Severity
| Assignee | ||
Comment 4•2 years ago
|
||
Ahhh.. This is effectively bug 1419225.
Going to have to back that out & reopen bug 1831148
| Assignee | ||
Comment 5•2 years ago
|
||
Was introduced in bug 1831148, regresses the behaviour fixed by
bug 1419225.
Comment 7•2 years ago
|
||
| bugherder | ||
Comment 8•2 years ago
|
||
The patch landed in nightly and beta is affected.
:dshin, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox115towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 9•2 years ago
|
||
Comment on attachment 9341528 [details]
Bug 1839550 - Back out increased clamping range. r=#layout-reviewers
Beta/Release Uplift Approval Request
- User impact if declined: Artefacts on large animated elements with perspective. Real precedent in bug 1419225. Verified no artefacts on today's Nightly.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce: Bug 1839550 comment 0
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Backout into previous behaviour that has existed for 5+ years.
- String changes made/needed: -
- Is Android affected?: Yes
Comment 10•2 years ago
|
||
Comment on attachment 9341528 [details]
Bug 1839550 - Back out increased clamping range. r=#layout-reviewers
Thanks for the request, 115 is now in RC moving the request to release
Comment 11•2 years ago
|
||
Comment on attachment 9341528 [details]
Bug 1839550 - Back out increased clamping range. r=#layout-reviewers
Approved for 115.0 RC2
Comment 12•2 years ago
|
||
| bugherder uplift | ||
Updated•2 years ago
|
Comment 13•2 years ago
|
||
| bugherder uplift | ||
Updated•2 years ago
|
Comment 14•2 years ago
|
||
I have managed to reproduce the issue using Firefox Beta 115.b9 (20230622161221) and verified the fix using Firefox Nightly 116.0a1 (20230629214838), Firefox 115.0 RC 2 (20230629134642) and Firefox ESR 115 (20230629151558) on Windows 10, MacOS 11.6 and Ubuntu 20.04.
Description
•