Bug 1839550 - Back out increased clamping range. r=dholbert, a=dmeehan

Was introduced in bug 1831148, regresses the behaviour fixed by
bug 1419225.

Differential Revision: https://phabricator.services.mozilla.com/D182346